araqne-webconsole/src/main/resources/WEB-INF/css/app.css
/* ... */
.general-detail {
	margin-left: 0px;
}

.general-detail li {
	margin-top: 20px;
}

.hide > .icon-minus {
	/*background-position: -456px -72px;*/
	background-position: -408px -96px;
	/* background-position: -313px -119px; */
}

.icon-refresh.pull-right {
	margin-top: 15px;
	cursor: pointer;
}

.pane {
	list-style: none;
	margin-left: 0;
	padding: 10px 40px;
}

.paneSentry, .paneLocalLogger {
	padding: 0;
}

/*
.table-bordered {
	border: 1px solid #aaa;
	border-collapse: separate;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
	border-radius: 0px;
}

.table th, .table td {
	padding: 8px;
	line-height: 17px;
	text-align: left;
	vertical-align: top;
	border-top: 0;
}
*/

.table-striped tbody > tr:nth-child(odd) > td, .table-striped tbody > tr:nth-child(odd) > th {
	background-color: rgb(243,243,243);
}

thead tr {
	background-color: rgb(234,234,234);
}

thead th {
	border-bottom: 1px solid #ccc;
	white-space: nowrap;
}



.modal-backdrop {
	overflow-y: auto;
}

.modal-wrapper {
	position: relative;
	top: 50px;
	left: 50%;
	z-index: 1050;
	width: 100%;
	margin-left: -50%;
	margin-bottom: 50px;
	overflow: visible;
}

.modal-backdrop.in, .modal-backdrop.fade.in, .modal-backdrop {
	opacity: 1.0;
	filter: alpha(opacity=100);
	background: rgba(0, 0, 0, 0.6);
}


.btnEditSentry, .btnRemoveSentry {
	margin-top: -1px;
	margin-left: 3px;
	margin-right: -1px;
}

.mdlRemoveSentry, .mdlRemoveLogger, .mdlAnnounceLocalLogger {
	position: absolute;
	width: 550px;
	margin-left: -275px;
	padding: 10px 20px;
}

.tbl-container {
	width: 100%;
	border: 1px solid #aaa;
	overflow-x: auto;
	min-height: 220px;
}

.tbl-container > table {
	display: table;
	border: 0;
	margin: 0;
}

tr[tr-selectable], tr[tr-multi-selectable] {
	cursor: pointer;
}

tr[tr-selectable]:nth-child(odd).tr-selected > td, tr[tr-multi-selectable]:nth-child(odd).tr-selected > td {
	background-color: rgba(0, 153, 255, .3) !important;
}

tr[tr-selectable]:nth-child(even).tr-selected > td, tr[tr-multi-selectable]:nth-child(even).tr-selected > td {
	background-color: rgba(0, 153, 255, .2) !important;
}

.well.leftPane {
	box-shadow: 0 0 40px rgba(0,0,0,.4);
}


ul.well1 {
	margin-left: 0;
	list-style: none;
	padding-bottom: 20px;
}

li.well1 {
	/*
	border: 1px solid #ccc;
	border-radius: 10px;
	*/
	border-bottom: 1px solid #ccc;

	padding: 10px 40px;
	/*box-sizing: border-box; */

	margin-bottom: 5px;

	background-color: white;
}

li.well1.wellnbr, li.well1:last-child {
	margin-bottom: 20px;
	border-bottom: 0;
}




ul.area {
	margin-left: 0;
	list-style: none;
	padding-bottom: 20px;
}

li.area {
	margin: 10px 40px;
	border-bottom: 1px solid #ccc;
	/*padding: 10px;*/
	box-sizing: border-box;
	margin-bottom: 10px;
	background-color: white;
}

li.area:last-child {
	margin-bottom: 0px;
}


.alert-cont {
	float: right;
	right: 50%;
	position: relative;
}

.alert.alert-fix {
	float: right;
	right: -50%;
	position: relative;
	z-index: 9999;
	
	box-shadow: 0 0 40px #000;
}

.alert.alert-fix-side {
	position: fixed;
	right: 38px;
	top: 60px;
	/*bottom: -40px;*/
	opacity: 0;
	-webkit-transition: bottom .5s ease, opacity .5s ease;
}

.alert.alert-fix-side.show {
	
	top: 60px;
	opacity: 1;
}


.qr-th-type {
	/*display: none;*/
	/* display: inline-block; */
	background-color: #999;
	border-radius: 4px;
	color: white;
	font-size: 0.8em;
	padding: 1px;
	padding-top: 0px;
	width: 16px;
	height: 16px;
	text-align: center;
}

.qr-th-type i {
	margin: 0;
}

.cmpqr.table {
	margin-bottom: -5px;
}

.cmpqr.expandable {
	display: inline-table;
	margin-right: 160px;
}


query-input.loading textarea {
	width: calc(100% - 190px);
}

query-input textarea, query-input.loaded textarea {
	width: calc(100% - 105px);
}

query-input.loading .stop {
	display: block;
}

query-input .stop, query-input.loaded .stop {
	display: none;
}

query-input .btn {
	float: right;
	width: 80px;
	margin-left: 5px;
}

query-input textarea {
	/*-webkit-transition: background-color .6s ease;
	-moz-transition: background-color .6s ease;
	-o-transition: background-color .6s ease;
	transition: background-color .6s ease;*/
}

@-webkit-keyframes query-input-loaded {
	from {
		background-color: lightgreen;
	}
	to {
		background-color: white;
	}
}

query-input.loaded textarea {
	-webkit-animation: query-input-loaded 1s ease;
}
/* ... */

